--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,16 @@
   outline: none !important;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #e9d5ff inset !important; /* your purple-200 */
+  box-shadow: 0 0 0px 1000px #e9d5ff inset !important;
+  -webkit-text-fill-color: black !important;
+}
+
 
 /* {step === 4 && (
   <form
